Fix spacing issue

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,6 +9,7 @@
 }
 
 .arrow-calendar-container {
+    min-height: 740px;
     display: flex;
     align-items: center;
 }
@@ -17,7 +18,6 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-bottom: 20px;
 }
 
 .arrow {
